fixed page not showing, had a random

--- a/style.css
+++ b/style.css
@@ -10,12 +10,13 @@ body{
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    background: #8a8266;
 }
   
 
 .wrapper{
     background: coral;
-    width: 550px;
+    width: 430px;
     height: 300px;
     border-radius: 10px;
     
@@ -23,7 +24,7 @@ body{
 
 .wrapper h1{
     color: dodgerblue;
-    font-size: 40px;
+    font-size: 25px;
     font-weight: 500;
     padding: 20px 25px;
     text-align: center;
@@ -42,11 +43,11 @@ body{
 
 }
 
-.content .typing-input{
+/* .content .typing-input{
     background-color: transparent;
     
     
-}
+} */
 
 .inputs input{
     height: 50px;
